# RAG-TCC

./: .gitignore  CLAUDE.md  QUERY_BUILDER_INTEGRATION.md  RAG_PIPELINE_FINAL.md  README.md  README_RAG_PIPELINE.md  SEMAPHORE_SYSTEM_DOCS.md  SETUP.md  TODO.md  VECTOR_SEARCH_RELEVANCE.md  links.md  prompt.md  pyproject.toml  requirements.txt  run_spider_with_limit.sh  run_trf4_process.py  setup-vector-database.md  test_setup.py  test_spider_limit.py  test_stf_spider_changes.py
.github/instructions/: no-extra-work.instructions.md
.scrapy_state/: trf4_shared_state.json
4r_scraper/: comportamento_scraper.txt  manage.py  scrapy.cfg
4r_scraper/4r_scraper/: 4r_queue_manager.py  items.py  pipelines.py
4r_scraper/data/: scraping_stats.json
DBVECTOR/: .env.example  .gitignore  DEPLOY_CONDA.md  ENTREGA.md  ESTRUTURA_RAG_COMPLETA.md  INSTALL.md  LICENSE  MIGRATION_CONDA_GPU.md  Makefile  QUALITY.md  QUICKSTART.md  RAG_SEEU_README.md  README.md  SANITY.md  build.ps1  demo.py  docker-compose.yml  environment.cpu.yml  environment.gpu.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_gpu_quick.py  test_pdf_download.py  test_rag_implementation.py
DBVECTOR/data/eval/: qa_dev.jsonl
DBVECTOR/data/indexes/faiss/: .gitkeep
DBVECTOR/reports/eval/: .gitkeep
DBVECTOR/reports/inspect/: .gitkeep  embeddings_summary.json
DBVECTOR/reports/validation/: .gitkeep  report.json
DBVECTOR/src/: chunking.py  config.py  document_finder.py  embeddings.py  rag_normalizer.py  rag_schemas.py  rag_service.py  request_logger.py  schema.py
DBVECTOR/src/api/: conversation_manager.py  langchain_rag.py  main.py
DBVECTOR/src/eval/: __init__.py  inspect_embeddings.py  retrieval_eval.py
DBVECTOR/src/loaders/: __init__.py  legal_document_loader.py
DBVECTOR/src/pipelines/: build_faiss.py  build_opensearch.py  query_faiss.py  query_opensearch.py
DBVECTOR/src/storage/: __init__.py  base.py  factory.py  faiss_store.py  opensearch_store.py
DBVECTOR/src/tools/: __init__.py  analyze_and_query.py  analyze_index_quick.py  chunking.py  query_builder.py  query_optimizer.py  telemetry.py  tratamento_dados.py  validate_data.py
DBVECTOR/tests/: conftest.py  test_api_faiss.py  test_api_search.py  test_chunking.py  test_dedupe_and_ids.py  test_embeddings.py  test_faiss_gpu.py  test_faiss_store.py  test_inspect_embeddings.py  test_io_pipelines.py  test_langchain_rag.py  test_opensearch_store.py  test_query_optimizer.py  test_retrieval_eval.py  test_tratamento_dados.py  test_validate_data.py
DBVECTOR/tests/bench/: __init__.py  test_build_index_time.py  test_query_latency.py
Interface/: .env.example  ANSWER_COMPOSER.md  INTEGRATION.md  QUERY_BUILDER.md  RAG_INTEGRATION.md  RAG_OPS_LOGGER.md  README.md  SETUP.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
Interface/app/: app.vue
docs/: FLUXO_TECNICO_RAG.md  fluxograma.mmd  sequencia.mmd  topologia-simples.mmd
legal_scraper/: manage.py  simple_test.py  test_connection.py
legal_scraper/data/: scraping_stats.json
legal_scraper/legal_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/: __init__.py
scraper/utils/: __init__.py  browser.py
scraper_old/: main.py
scraper_old/utils/: helpers.py  parser.py
scripts/: dev.sh
seeu_scraper/: README.md  scrapy.cfg
seeu_scraper/data/: seeu_docs.json
seeu_scraper/seeu_scraper/: items.py  middlewares.py  pipelines.py  settings.py
stf_scraper/: 3.7.0  MULTITHREADING_GUIDE.md  manage.py  manage_clean.py  scrapy.cfg  stf_queue_manager.py
stf_scraper/configs/: __init__.py  legend.md  links-leis-constituicao.md  queries.txt
stf_scraper/data/: scraping_stats.json  seeu_docs_output.json
stf_scraper/stf_scraper/: items.py  middlewares.py  pipelines.py  queue_state.json  requirements.txt  settings.py  stf_queue_manager.py
stf_scraper/temp_queue/: query_319-A_1757836456.json  query_323_1758761533.json  query_346_1757836456.json
stj_scraper/: DEMO_EXECUTION_LOG.txt  README.md  STATUS_IMPLEMENTATION.md  manage.py  scrapy.cfg  stj_queue_manager.py
stj_scraper/data/: scraping_stats.json  stj_decisoes_monocraticas.jsonl
stj_scraper/stj_scraper/: items.py  middlewares.py  pipelines.py  queue_state.json  settings.py  (+1 more)
trf4_scraper/: README.md  __init__.py  agent_prompt.txt  cxt_salvar_clipboard.txt  manage.py  prompt.md  run_steps_headful.py  scrapy.cfg  settings.py
(+392 files in other folders)
